--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "nwidart/laravel-modules": "^12.0",
         "pusher/pusher-php-server": "^7.2",
         "spatie/laravel-permission": "^6.20",
+        "spatie/simple-excel": "^3.7",
         "srmklive/paypal": "^3.0"
     },
     "require-dev": {
